Se termina el capitulo de listas

--- a/listas.ipynb
+++ b/listas.ipynb
@@ -1527,6 +1527,390 @@
     "for i in B:\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 244\n",
+    "\n",
+    "Diseña un programa tal que lea una matriz A de dimension mxn y muestre un vector v de talla n tal que \n",
+    "\n",
+    "vj = \u0019m\n",
+    "i=1\n",
+    "Ai,j ,\n",
+    "\n",
+    "\n",
+    "para j entre 1 y n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMatriz generada:\n",
+      "[10.0, 15.0, 20.0, 0.0]\n",
+      "[2.0, 15.0, 14.0, 20.0]\n",
+      "[23.0, 25.0, 22.0, 56.0]\n",
+      "[17.0, 15.0, 10.0, 1.0]\n",
+      "\tVector:\n",
+      "[45.0]\n",
+      "[51.0]\n",
+      "[126.0]\n",
+      "[43.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declaramos variables\n",
+    "p = int(input('Dime el numero de filas de A:\\n'))\n",
+    "q = int(input('Dime el numero de columnas A:\\n'))\n",
+    "aux = 0\n",
+    "vector = []\n",
+    "\n",
+    "# Inicializamos la matriz con ceros\n",
+    "A = []\n",
+    "for i in range(p):\n",
+    "    A.append([0] * q)\n",
+    "    \n",
+    "#se piden datos por teclado\n",
+    "for i in range(p):\n",
+    "    for j in range(q):\n",
+    "        A[i][j] = float(input('Dame el elemento {0}, {1}:\\n'.format(i, j)))\n",
+    "        \n",
+    "# Procedemos a llenar el vector\n",
+    "for i in range(p):\n",
+    "    for j in range(q):\n",
+    "        aux = A[i][j] + aux\n",
+    "    vector.append([aux])\n",
+    "    aux = 0\n",
+    "        \n",
+    "# Imprimimos las dos matrices para comprobar\n",
+    "print('\\tMatriz generada:')\n",
+    "for i in A:\n",
+    "    print(i)\n",
+    "    \n",
+    "print('\\tVector:')\n",
+    "for i in vector:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 245 \n",
+    "\n",
+    "Diseña un programa que lea una matriz A de dimensión m x n y muestre un vextor v de talla min(n,m) tal que sea la sumatoria de j =1 hasta i y k = 1 hasta i de A <sub>j.k</sub> para i entre 1 u min(n,m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "\tMatriz\n",
+      "[[1.0, 2.0], [3.0, 4.0]]\n",
+      "[[1.0, 2.0], [3.0, 4.0]]\n",
+      "\tVector:\n",
+      "[3.0]\n",
+      "[10.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declaramos variables\n",
+    "p = int(input('Dime el numero de filas de A:\\n'))\n",
+    "q = int(input('Dime el numero de columnas A:\\n'))\n",
+    "aux = 0\n",
+    "vector = []\n",
+    "\n",
+    "# Inicializamos la matriz vacia\n",
+    "A = []\n",
+    "for i in range(p):\n",
+    "    A.append([0] * q)\n",
+    "\n",
+    "# Empezamos a llenar la matriz con datos del teclado\n",
+    "for i in range(p):\n",
+    "    for j in range(q):\n",
+    "        A[i][j] = float(input('Dame el elemento {0}, {1}:\\n'.format(i, j)))\n",
+    "\n",
+    "# Empezamos a realizar la sumatoria\n",
+    "for i in range(p):\n",
+    "    for j in range(q):\n",
+    "        aux = A[i][j] + aux\n",
+    "    vector.append([aux])\n",
+    "    \n",
+    "# Imprimimos matriz y vector y el min(m, n)\n",
+    "print(min(p,q))\n",
+    "print(\"\\tMatriz\")\n",
+    "for i in A:\n",
+    "    print(A)\n",
+    "\n",
+    "print(\"\\tVector:\")\n",
+    "for i in vector:\n",
+    "    print(i)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 246 \n",
+    "\n",
+    "Diseañ un program que, dada una matriz determine si la suma de los elementos de cualquiera de sus filas es igual a la suma de los elementos de cualquiera de sus columnas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hay sumas iguales entre filas y columnas\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Declaramos variables\n",
+    "f = int(input(\"Ingresa el numero de filas:\\n\"))\n",
+    "c = int(input(\"Ingresa el numero de columnas:\\n\"))\n",
+    "aux = 0\n",
+    "suma_fila = []\n",
+    "suma_columna = []\n",
+    "coincide = False\n",
+    "\n",
+    "# Inicializamos la matriz con ceros\n",
+    "A = []\n",
+    "for i in range(f):\n",
+    "    A.append([0] * c)\n",
+    "    \n",
+    "# Pedimos datos desde el teclado\n",
+    "for i in range(p):\n",
+    "    for j in range(q):\n",
+    "        A[i][j] = float(input('Dame el elemento {0}, {1}:\\n'.format(i, j)))\n",
+    "        \n",
+    "# Realizamos las sumas por fila y se almacenan en una lsita\n",
+    "for i in range(p):\n",
+    "    for j in range(q):\n",
+    "        aux = A[i][j] + aux\n",
+    "    suma_fila.append([aux])\n",
+    "    aux = 0\n",
+    "\n",
+    "# Realizamos las sumas por columna y almacenarlos en una lista\n",
+    "aux = 0\n",
+    "for i in range(p):\n",
+    "    for j in range(q):\n",
+    "        aux = A[j][i] + aux\n",
+    "    suma_columna.append([aux])\n",
+    "    aux = 0\n",
+    "        \n",
+    "# Comparamos los resultados y si uno coincide lo mostramos\n",
+    "for i in range(1, len(suma_columna)):\n",
+    "    for j in range(0, len(suma_columna) - 1):\n",
+    "        if suma_columna[j] == suma_fila[j + 1]:\n",
+    "            coincide = True\n",
+    "\n",
+    "if coincide:\n",
+    "    print(\"Hay sumas iguales entre filas y columnas\")\n",
+    "else:\n",
+    "    print(\"Ninguna suma coincide\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.4.5 El juego de la vida\n",
+    "\n",
+    "El juego de la vida es un juego sin jugadores. Se trata de colocar una serie de fichas en un tablero y dejar que evolucionen siguiendo unas reglas extremadamente simples. Lo curioso es que esas reglas dan origen a una gran complejidad que hace apasionante la mera observación de la evolución de las fichas en el tablero (hay gustos para todo).\n",
+    "En el juego original se utiliza un tablero (una matriz) con infinitas filas y columnas. Como disponer de una matriz de dimensión infinita en un programa es imposible, supondremos que presenta dimensión m x n, donde m y n son valores escogidos por nosotros. Cada celda del tablero contiene una célula que puede estar viva o muerta. Representaremos las células vivas con su casilla de color negro y las células muertas con la celda en blanco. Cada casilla del tablero cuenta con ocho celdas vecinas. El mundo del juego de la vida está gobernado por un reloj que marca una serie de pulsos con los que mueren y nacen células. Cuándo nace y cuándo muere una célula solo depende de cuántas células vecinas están vivas. He aquí las reglas:\n",
+    "\n",
+    "- Regla del nacimiento. Una célula muerta resucita si tiene exactamente tres vecinos vivos. En\n",
+    "estas figuras te señalamos celdas muertas que pasan a estar vivas con el siguiente pulso\n",
+    "- Regla de la supervivencia. Una celda viva permanece viva si tiene dos o tres vecinos. Aquí te\n",
+    "señalamos células que ahora están vivas y permanecerán así tras el siguiente pulso\n",
+    "- Regla de la superpoblación. Una célula muere o permanece muerta si tiene cuatro o más\n",
+    "vecinos. Estas figuras muestran células que ahora están vivas o muertas y estarán muertas\n",
+    "tras el siguiente pulso\n",
+    "- Regla del aislamiento. Una célula muere o permanece muerta si tiene menos de dos vecinos. En estas figuras te señalamos células que ahora están vivas o muertas y estarán muertas tras el siguiente pulso\n",
+    "\n",
+    "Vamos a hacer un programa que muestre la evolución del juego de la vida durante una serie de pulsos de reloj. Empezaremos con un prototipo que nos muestra la evolución del tablero en el terminal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      ".....*....\n",
+      ".....*....\n",
+      ".....*....\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "Pulso 1\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "....***...\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "Pulso 2\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      ".....*....\n",
+      ".....*....\n",
+      ".....*....\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "Pulso 3\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "....***...\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "Pulso 4\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      ".....*....\n",
+      ".....*....\n",
+      ".....*....\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "Pulso 5\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "....***...\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "Pulso 6\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      "..........\n",
+      ".....*....\n",
+      ".....*....\n",
+      ".....*....\n",
+      "..........\n",
+      "..........\n",
+      "..........\n"
+     ]
+    }
+   ],
+   "source": [
+    "filas = 10\n",
+    "columnas = 10\n",
+    "\n",
+    "tablero = []\n",
+    "for i in range(filas):\n",
+    "    tablero.append([False] * columnas)\n",
+    "\n",
+    "tablero[4][5] = True\n",
+    "tablero[5][5] = True\n",
+    "tablero[6][5] = True\n",
+    "\n",
+    "for y in range(filas):\n",
+    "    for x in range(columnas):\n",
+    "        if tablero[y][x]:\n",
+    "            print(\"*\", end=\"\")\n",
+    "        else:\n",
+    "            print(\".\", end=\"\")\n",
+    "    print()\n",
+    "    \n",
+    "pulsos = 6\n",
+    "for t in range(pulsos):\n",
+    "    \n",
+    "    # Preparar un nuevo tablero\n",
+    "    nuevo = []\n",
+    "    for i in range(filas):\n",
+    "        nuevo.append([False] * columnas)\n",
+    "        \n",
+    "    # Actualizar el tablero\n",
+    "    for y in range(filas):\n",
+    "        for x in range(columnas):\n",
+    "            # Calcular el numero de vecinos de la celda que estamos visitando\n",
+    "            n = 0\n",
+    "            if y > 0 and x > 0 and tablero[y-1][x-1]:\n",
+    "                n += 1\n",
+    "            if x > 0 and tablero[y][x-1]:\n",
+    "                n +=1\n",
+    "            if y < filas - 1 and x > 0 and tablero[y+1][x-1]:\n",
+    "                n += 1\n",
+    "            if y > 0 and tablero[y-1][x]:\n",
+    "                n += 1\n",
+    "            if y < filas - 1 and tablero[y+1][x]:\n",
+    "                n +=1\n",
+    "            if y > 0 and x < columnas - 1 and tablero[y-1][x+1]:\n",
+    "                n += 1\n",
+    "            if x < columnas - 1 and tablero[y][x+1]:\n",
+    "                n +=1\n",
+    "            if y < filas - 1 and x < columnas - 1 and tablero[y+1][x+1]:\n",
+    "                n += 1\n",
+    "            # aplicar las reglas\n",
+    "            if tablero[y][x] and (n == 2 or n == 3): #Supervivencia\n",
+    "                nuevo[y][x] = True\n",
+    "            elif not tablero[y][x] and n == 3: # Nacimiento\n",
+    "                nuevo[y][x] = True\n",
+    "            else: # Superpoblacion y aislamiento\n",
+    "                nuevo[y][x] = False       \n",
+    "                                             \n",
+    "    # Actualizar el teclado\n",
+    "    tablero = nuevo\n",
+    "    \n",
+    "    # Representar el tablero\n",
+    "    print(\"Pulso\", t+1)\n",
+    "    for y in range(filas):\n",
+    "        for x in range(columnas):\n",
+    "            if tablero[y][x]:\n",
+    "                print(\"*\", end=\"\")\n",
+    "            else:\n",
+    "                print(\".\", end=\"\")\n",
+    "        print()"
+   ]
   }
  ],
  "metadata": {
