Se incrementan el numero de problemas resueltos

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -385,63 +385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3397, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_3508\\1346297160.py\", line 21, in <cell line: 21>\n",
-      "    print(numeros_perfectos(num))\n",
-      "  File \"C:\\Users\\rod_e\\AppData\\Local\\Temp\\ipykernel_3508\\1346297160.py\", line -1, in numeros_perfectos\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 1992, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1118, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 1012, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 865, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 818, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\IPython\\core\\ultratb.py\", line 736, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stack_data\\core.py\", line 698, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stack_data\\core.py\", line 649, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stack_data\\utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\stack_data\\core.py\", line 628, in executing_piece\n",
-      "    return only(\n",
-      "  File \"d:\\Users\\rod_e\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\executing\\executing.py\", line 164, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+      "La solucion de este problem solo funciona hasta el cuarto elemento ya que al ir creciendo se hace más compleja las operaciones y el programa no corre\n"
      ]
     }
    ],
    "source": [
-    "# Definimos la funcion\n",
+    "\"\"\"# Definimos la funcion\n",
     "def numeros_perfectos(n):\n",
     "    lista = []\n",
     "    l = 0\n",
@@ -461,7 +417,8 @@
     "num = int(input(\"Dame un número:\\n\"))\n",
     "\n",
     "# Mostramos resultados\n",
-    "print(numeros_perfectos(num))"
+    "print(numeros_perfectos(num))\"\"\"\n",
+    "print(\"La solucion de este problem solo funciona hasta el cuarto elemento ya que al ir creciendo se hace más compleja las operaciones y el programa no corre\")"
    ]
   },
   {
@@ -614,14 +571,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Definicion de la funcion\n",
     "def buscar_serie(lista):\n",
+    "    cambio = 0\n",
     "    if len(lista) > 0:\n",
-    "        par = "
+    "        par = lista[0]\n",
+    "        for i in lista:\n",
+    "            if par != lista[i]:\n",
+    "                cambio += 1\n",
+    "                par = lista[i]\n",
+    "    return cambio + 1\n",
+    "\n",
+    "print(buscar_serie([1, 1, 8, 8, 8, 8, 0, 0, 0, 2, 10, 10]))\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 270 \n",
+    "\n",
+    "Diseña una funcion que diga en que posicion empieza la serie mas larga de una lista. En el ejemplo del ejercicio antrior, la serie mas larga empieza en la posicion 2 (que es el indice donde aparece el primer 8). (Nota: si hay dos series de igual longitud y esta es la mayor, debes devolver la posicion de lap rimera de las series, Por ejemplo para )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Python\\funciones.ipynb Cell 35'\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=15'>16</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m inicio, final\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=17'>18</a>\u001b[0m \u001b[39m# Mandamos llamar la funcion\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=18'>19</a>\u001b[0m \u001b[39mprint\u001b[39m(conteo_mas_larga([\u001b[39m2\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m2\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m1\u001b[39;49m, \u001b[39m9\u001b[39;49m, \u001b[39m8\u001b[39;49m]))\n",
+      "\u001b[1;32md:\\rod_e\\Documents\\VSCode\\Python\\funciones.ipynb Cell 35'\u001b[0m in \u001b[0;36mconteo_mas_larga\u001b[1;34m(lista)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=5'>6</a>\u001b[0m final \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m elemento \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, \u001b[39mlen\u001b[39m(lista)):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=7'>8</a>\u001b[0m     \u001b[39mif\u001b[39;00m lista[elemento\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m==\u001b[39m elemento[elemento]:\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=8'>9</a>\u001b[0m         inicio \u001b[39m=\u001b[39m elemento \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/rod_e/Documents/VSCode/Python/funciones.ipynb#ch0000034?line=9'>10</a>\u001b[0m         conteo \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def conteo_mas_larga(lista):\n",
+    "    if len(lista) > 0:\n",
+    "        conteo = 0\n",
+    "        inicio = 0\n",
+    "        final = 0\n",
+    "        for elemento in range(1, len(lista)):\n",
+    "            if lista[elemento-1] == elemento[elemento]:\n",
+    "                inicio = elemento - 1\n",
+    "                conteo += 1\n",
+    "            else:\n",
+    "                final = elemento\n",
+    "    else:\n",
+    "        print(\"La lsita esta vacia\")\n",
+    "            \n",
+    "    return inicio, final\n",
+    "\n",
+    "# Mandamos llamar la funcion\n",
+    "print(conteo_mas_larga([2, 2, 2, 2, 2, 1, 1, 1, 9, 8]))\n",
+    "                \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 271\n",
+    "\n",
+    "Haz una funcion que reciva una lista de númros y devuelva la media de dichos numeros. Ten cuidado con la lista vacía (su media es cero)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2919.1428571428573\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def calcula_media(lista):\n",
+    "    x = len(lista)\n",
+    "    if x == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        suma = 0\n",
+    "        for i in range(0, x):\n",
+    "            suma = lista[i] + suma\n",
+    "        return suma / x\n",
+    "    \n",
+    "# Mandamos llamar la funcion \n",
+    "print(calcula_media([2, 10, 12, 15, 63, 333, 19999]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 273\n",
+    "\n",
+    "Diseña una funcion que devuleva el valor absoluto de la maxima diferencia entre dos elementos consecutivos de una lista. Por ejemplo, el valor devuelto para la lista [1, 10, 2, 6, 2, 0] es 9, pues es la diferencia entre el valor 1 y el valor 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def maxima_diferencia(lista):\n",
+    "    x = len(lista)\n",
+    "    if x > 0:\n",
+    "        aux = 0\n",
+    "        diferencia = 0\n",
+    "        for i in range(1, x):\n",
+    "            aux = abs(lista[i - 1] - lista [i])\n",
+    "            if (aux > diferencia):\n",
+    "                diferencia = aux      \n",
+    "        return diferencia\n",
+    "      \n",
+    "    else:\n",
+    "        return \"La lista no es valida\"\n",
+    "    \n",
+    "# Mandamos llamar la funcion\n",
+    "print(maxima_diferencia([1, 10, 2, 6, 2, 0]))"
    ]
   }
  ],
