Se ingresaron mas ejercicio correspondientes al capitulo en el que se anda trabajando

--- a/funciones.ipynb
+++ b/funciones.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -691,6 +691,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Ejercicio 272\n",
+    "\n",
+    "Diseña una función que calcule el productorio de todos los numeros que componen una lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def calcula_productorio(lista):\n",
+    "    x = len(lista)\n",
+    "    if x > 0:\n",
+    "        producto = lista[0]\n",
+    "        for i in range(1, x):\n",
+    "            producto = producto * lista[i]\n",
+    "        return producto\n",
+    "    else:\n",
+    "        return \"La longitud de la lista no es valida\"\n",
+    "    \n",
+    "# Mandamos llamar la funcion\n",
+    "print(calcula_productorio([1,2,10]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ejercicio 273\n",
     "\n",
     "Diseña una funcion que devuleva el valor absoluto de la maxima diferencia entre dos elementos consecutivos de una lista. Por ejemplo, el valor devuelto para la lista [1, 10, 2, 6, 2, 0] es 9, pues es la diferencia entre el valor 1 y el valor 10."
@@ -698,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -728,11 +766,121 @@
     "# Mandamos llamar la funcion\n",
     "print(maxima_diferencia([1, 10, 2, 6, 2, 0]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 274\n",
+    "\n",
+    "Diseña una función que devuelva el valor absoluto de la máxima diferencia entre cualquier par de elementos de una lista. Por ejemplo, el valor devuelto para la lista [1, 10, 2, 6, 8, 2, 0] es 10 pues es la diferencia entre el valor 10 y 0. (Pista: te puede ocnvenir conocer el valor máximo y el valor mínimo de la lista)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def maxima_diferencia_de_una_lista(lista):\n",
+    "    x = len(lista)\n",
+    "    if x > 0:\n",
+    "        return abs(max(lista)- min(lista))\n",
+    "    else:\n",
+    "        return \"La lista no es valida\"\n",
+    "\n",
+    "# Mandamos llamar la funcion\n",
+    "print(maxima_diferencia_de_una_lista([1, 10, 2, 6, 8, 2, 0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 275\n",
+    "\n",
+    "Define una función que, dada una cadena x, devuelva otra cuyo contenido sea el resultado de concatenar 6 veces x consigo misma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El mejor del mundo El mejor del mundo El mejor del mundo El mejor del mundo El mejor del mundo El mejor del mundo \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def multiplica_cadena(cadena):\n",
+    "    return (cadena * 6)\n",
+    "\n",
+    "# Pedimos la cadena desde teclado\n",
+    "introucida = input(\"Ingresa una cadena:\\n\")\n",
+    "print(multiplica_cadena(introucida))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 276\n",
+    "\n",
+    "Diseña una función que, dada una lista de cadenas, devuelva la cadena más larga. Si dos o más cadenas miden lo mismo y son las más largas, la funciòn devolverá una cualquiera de ellas.\n",
+    "\n",
+    "(Ejemplo: dada la lista[\"Pepe\", \"Juan\", \"Maria\", \"Ana\"]. La función devolverá la cadena \"Maria\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pepe\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definimos la funcion\n",
+    "def calculo_cadena_mas_larga(lista):\n",
+    "    x = len(lista)\n",
+    "    if x > 0:\n",
+    "        aux = 0\n",
+    "        maximo = 0\n",
+    "        for i in range(0, x):\n",
+    "            if len(lista[i]) > aux:\n",
+    "                maximo = lista[i]\n",
+    "                aux = len(lista[i])\n",
+    "            return maximo           \n",
+    "    else:\n",
+    "        return \"La lista ingresada no es valida\"\n",
+    "\n",
+    "\n",
+    "print(calculo_cadena_mas_larga([\"Pepe\", \"Juan\", \"Maria\", \"Ana\"]))\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -746,12 +894,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "87e37ab4b4be2a65128e65ee6dd2cd25882cc8ca9e7bb4e0cbfeff46ad1b513d"
+    "hash": "63963b3f4c440940f0b94a3100916033a226cb4f45979123153792d60aa56d6a"
    }
   }
  },
